--- a/src/minter_assets/assets/main.css
+++ b/src/minter_assets/assets/main.css
@@ -24,6 +24,8 @@ form {
 button[type="submit"] {
   padding: 5px 20px;
   margin: 10px auto;
+  background-color: rgb(147, 147, 255);
+  font-size: large;
 }
 
 #greeting {
@@ -42,3 +44,5 @@ div {
   justify-content: center;
   align-items: center;
 }
+
+
